--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-13 23:39+0200\n"
+"PO-Revision-Date: 2011-08-13 23:40+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12322,10 +12322,9 @@ msgid "%s%% of all connections are aborted. This value should be below 1%%"
 msgstr ""
 
 #: po/advisory_rules.php:230
-#, fuzzy
 #| msgid "rate of aborted connections"
 msgid "Rate of aborted connections"
-msgstr "durdurulan bağlantıların oranı"
+msgstr "Durdurulan bağlantıların oranı"
 
 #: po/advisory_rules.php:231
 msgid "Too many connections are aborted"
