Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-13 23:42+0200\n"
+"PO-Revision-Date: 2011-08-14 18:20+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1131,6 +1131,10 @@ msgid ""
 "likely that your current configuration will not work anymore. Please reset "
 "your configuration to default in the <i>Settings</i> menu."
 msgstr ""
+"Tarayıcınızın yerel depolamasındaki çizelge ayarlama yapılandırması, izleme "
+"iletisinin en yeni sürümüyle daha fazla uyumlu değil. Şu anki yapılandırma "
+"büyük olasılıkla bundan sonra çalışmayacak. Lütfen <i>Ayarlar</i> menüsünden "
+"yapılandırmanızı varsayılana sıfırlayın."
 
 #: js/messages.php:96
 #| msgid "Query cache disabled"
