--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 18:20+0200\n"
+"PO-Revision-Date: 2011-08-14 18:23+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11467,6 +11467,8 @@ msgid ""
 "To have more accurate averages it is recommended to let the server run for "
 "longer than a day before running this analyzer"
 msgstr ""
+"Daha kesin ortalamalara sahip olmak için bu çözümleyiciyi çalıştırmadan önce "
+"sunucunun bir günden daha fazla çalıştırılmasına izin vermek önerilir"
 
 #: po/advisory_rules.php:8
 #, php-format
