Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -11473,7 +11473,7 @@ msgstr ""
 #: po/advisory_rules.php:8
 #, php-format
 msgid "The uptime is only %s"
-msgstr ""
+msgstr "Çalışma süresi sadece %s"
 
 #: po/advisory_rules.php:10
 msgid "Questions below 1,000"
