--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 19:10+0200\n"
+"PO-Revision-Date: 2011-08-14 20:58+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11580,6 +11580,9 @@ msgid ""
 "Enable slow query logging by setting {log_slow_queries} to 'ON'. This will "
 "help troubleshooting badly performing queries."
 msgstr ""
+"{log_slow_queries} ayarını 'ON' yaparak yavaş sorgu günlüklemeyi "
+"etkinleştirin. Bu, kötü bir şekilde yürütülen sorguların sorunlarını "
+"gidermede yardımcı olacaktır."
 
 #: po/advisory_rules.php:33
 msgid "log_slow_queries is set to 'OFF'"
