--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 21:07+0200\n"
+"PO-Revision-Date: 2011-08-14 21:08+0200\n"
 "Last-Translator:  <saskumar@hotmail.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -100,7 +100,7 @@ msgstr "இந்த மதிப்பை பயன்படுத்துக"
 #: bs_disp_as_mime_type.php:29 bs_play_media.php:35
 #: libraries/blobstreaming.lib.php:343
 msgid "No blob streaming server configured!"
-msgstr ""
+msgstr "Blob தொடரோடி சேவையகம் கட்டமைக்கப்படவில்லை!"
 
 #: bs_disp_as_mime_type.php:35
 msgid "Failed to fetch headers"
