--- a/po/tr.po
+++ b/po/tr.po
@@ -11627,7 +11627,7 @@ msgstr ""
 
 #: po/advisory_rules.php:46
 msgid "Version less than 5.5.8 (the first GA release of 5.5)."
-msgstr "Sürüm 5.5.8'den az (5.5'in ilk GA yayımı)."
+msgstr "Sürüm, 5.5.8'den az (5.5'in ilk GA yayımı)."
 
 #: po/advisory_rules.php:47
 msgid "You should upgrade, to a stable version of MySQL 5.5"
