--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 21:15+0200\n"
+"PO-Revision-Date: 2011-08-14 21:16+0200\n"
 "Last-Translator:  <saskumar@hotmail.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -126,7 +126,7 @@ msgstr "%1$s தரவுத்தளம் உருவாக்கப்பட
 
 #: db_datadict.php:48 db_operations.php:362
 msgid "Database comment: "
-msgstr ""
+msgstr "தரவுத்தள கருத்துரை"
 
 #: db_datadict.php:157 libraries/schema/Pdf_Relation_Schema.class.php:1032
 #: libraries/tbl_properties.inc.php:700 tbl_operations.php:366
