--- a/po/ta.po
+++ b/po/ta.po
@@ -180,7 +180,7 @@ msgstr "வெற்று"
 #: libraries/tbl_properties.inc.php:109 tbl_printview.php:140
 #: tbl_structure.php:207 tbl_tracking.php:261
 msgid "Default"
-msgstr ""
+msgstr "முன்னிருப்பு"
 
 #: db_datadict.php:174 libraries/export/htmlword.php:256
 #: libraries/export/latex.php:363 libraries/export/odt.php:301
