Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -215,7 +215,7 @@ msgstr "கருத்துரைகள்"
 #: server_privileges.php:2355 sql.php:271 sql.php:332 tbl_printview.php:194
 #: tbl_structure.php:347 tbl_tracking.php:321 tbl_tracking.php:326
 msgid "No"
-msgstr ""
+msgstr "இல்லை"
 
 #: db_datadict.php:237 js/messages.php:225 libraries/Index.class.php:350
 #: libraries/Index.class.php:375 libraries/Index.class.php:674
