--- a/po/ta.po
+++ b/po/ta.po
@@ -237,7 +237,7 @@ msgstr "இல்லை"
 #: tbl_printview.php:194 tbl_structure.php:41 tbl_structure.php:347
 #: tbl_tracking.php:319 tbl_tracking.php:324
 msgid "Yes"
-msgstr ""
+msgstr "ஆம்"
 
 #: db_datadict.php:291 db_printview.php:264 tbl_printview.php:462
 msgid "Print"
