Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 21:21+0200\n"
+"PO-Revision-Date: 2011-08-14 21:22+0200\n"
 "Last-Translator:  <saskumar@hotmail.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -241,7 +241,7 @@ msgstr "ஆம்"
 
 #: db_datadict.php:291 db_printview.php:264 tbl_printview.php:462
 msgid "Print"
-msgstr ""
+msgstr "அச்சிடு"
 
 #: db_export.php:26
 msgid "View dump (schema) of database"
