--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 21:27+0200\n"
+"PO-Revision-Date: 2011-08-14 21:28+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11689,7 +11689,7 @@ msgstr ""
 #: po/advisory_rules.php:63
 #, php-format
 msgid "Available memory on this host: %s"
-msgstr ""
+msgstr "Bu anamakinedeki kullanılabilir bellek: %s"
 
 #: po/advisory_rules.php:65
 msgid "Query cache disabled"
