Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 21:38+0200\n"
+"PO-Revision-Date: 2011-08-14 21:39+0200\n"
 "Last-Translator:  <saskumar@hotmail.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -301,7 +301,7 @@ msgstr "கட்டமைப்பை மட்டும்"
 
 #: db_operations.php:481 tbl_operations.php:553 tbl_tracking.php:411
 msgid "Structure and data"
-msgstr ""
+msgstr "கட்டமைப்பு மற்றும் தரவுகள்"
 
 #: db_operations.php:482 tbl_operations.php:554 tbl_tracking.php:410
 msgid "Data only"
