--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 21:47+0200\n"
+"PO-Revision-Date: 2011-08-14 21:51+0200\n"
 "Last-Translator: சுரேஸ்குமார் செல்வநாயகம் <saskumar@hotmail.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -37,6 +37,9 @@ msgid ""
 "parent window, or your browser's security settings are configured to block "
 "cross-window updates."
 msgstr ""
+"இலக்கு உலாவி சாளரம் மேம்படுத்தப்பட முடியவில்லை. ஒருவேளை நீங்கள் மூல சாளரத்தை "
+"மூடியிருக்க வேண்டும், அல்லது உங்கள் உலாவி பாதுகாப்பு அமைப்புகள் "
+"குறுக்கு-சாளர மேம்படுத்தல்களை தடுக்க உள்ளமைக்கப்பட்டிருக்கின்றன."
 
 #: browse_foreigners.php:151 libraries/common.lib.php:2869
 #: libraries/common.lib.php:2876 libraries/common.lib.php:3062
