--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 21:55+0200\n"
+"PO-Revision-Date: 2011-08-14 21:56+0200\n"
 "Last-Translator: சுரேஸ்குமார் செல்வநாயகம் <saskumar@hotmail.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -374,7 +374,7 @@ msgstr "அட்டவணை"
 #: tbl_printview.php:358 tbl_structure.php:362 tbl_structure.php:468
 #: tbl_structure.php:876
 msgid "Rows"
-msgstr ""
+msgstr "வரிசைகள்"
 
 #: db_printview.php:107 libraries/db_structure.lib.php:53 tbl_indexes.php:197
 msgid "Size"
