--- a/po/ta.po
+++ b/po/ta.po
@@ -382,7 +382,7 @@ msgstr "அளவு"
 
 #: db_printview.php:160 db_structure.php:410 libraries/export/sql.php:756
 msgid "in use"
-msgstr ""
+msgstr "பயன்பாட்டில்"
 
 #: db_printview.php:185 libraries/db_info.inc.php:61
 #: libraries/export/sql.php:711
