--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-12 12:32+0200\n"
-"PO-Revision-Date: 2011-08-14 21:28+0200\n"
+"PO-Revision-Date: 2011-08-14 21:57+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11706,6 +11706,10 @@ msgid ""
 "and setting {query_cache_type} to 'ON'. <b>Note:</b> If you are using "
 "memcached, ignore this recommendation."
 msgstr ""
+"Sorgu önbelleğinin, eğer doğru şekilde yapılandırılmışsa fazlasıyla "
+"performansı geliştirdiği biliniyor. {query_cache_size} 2 basamaklı MiB "
+"değeri olarak ve {query_cache_type} ayarı 'ON' ayarlayarak etkinleştirin. "
+"<b>Not:</b> Eğer önbellekleme kullanıyorsanız, bu tavsiyeyi göz ardı edin."
 
 #: po/advisory_rules.php:68
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
