--- a/po/ta.po
+++ b/po/ta.po
@@ -424,7 +424,7 @@ msgstr "%s காட்சி கட்டுனர் இற்கு %s மா
 #: db_qbe.php:222 libraries/db_structure.lib.php:90
 #: libraries/display_tbl.lib.php:955
 msgid "Sort"
-msgstr ""
+msgstr "வரிசைப்படுத்து"
 
 #: db_qbe.php:231 db_qbe.php:265 libraries/db_structure.lib.php:97
 #: libraries/display_tbl.lib.php:547 libraries/display_tbl.lib.php:916
